ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
06/08/12 Daniel K. O.
        * Removed the need for defining dSINGLE/dDOUBLE; this is stored now in
          the generated ode/precision.h header.
        * Some code cleanup to get rid of GCC warnings.

05/30/12 Daniel K. O.
        * Made drawstuff draw shadows for lines.
        * Fixed dhinge's last constraint to properly handle rotations.

05/03/12 Daniel K. O.
        * Added two new joints: Double Ball and Double Hinge.

04/22/12 Daniel K. O.
        * Fixed plane2d joint: uninitialized variables (reported by Dimitris
          Papavasiliou)

04/14/12 Oleh Derevenko
        * Assertion checking macros moved into library private headers.

04/13/12 Daniel K. O.
        * Applied patch from bug  #3431829 - better handling of capsule-box with
          deep penetrations.
        * Fixed zero-mu issues: now either mu or mu2 can be set to zero.

03/17/12 Oleh Derevenko
        * Threaded execution support interface added. Optional built-in threading
          implementation added.
          Internal threading implementation is excluded by default and to be used, 
          it must be enabled with configure/premake.
          At present, if threading interface is assigned to a world, island 
          selection and stepping is performed in multiple threads (one thread per 
          island).

03/12/12 Oleh Derevenko
        * PURE_INLINE macro renamed to ODE_PURE_INLINE and definition of 
          dNextAfter()/dCopySign() corrected to avoid creating conflicts with 
          other libraries.

02/03/12 Oleh Derevenko
        * Assertion checking macros moved from common.h to error.h

12/18/11 Oleh Derevenko